# camera-pico-ov7670

./: CMakeLists.txt  camera.pio  pc_viewer.py
Deploy_MCU/: CMakeLists.txt
Deploy_MCU/example/: CMakeLists.txt  main.cpp
Deploy_MCU/include/camera/: camera.h
Deploy_MCU/model/: tflite_model.h
Training_Python/: face_detect_training.py  make_data.py  pc_view.py  test_model.py  test_tflite.py
Training_Python/model/: face.h5  face.json  int_quant_model.tflite  model_ml.cc
example/: CMakeLists.txt  main.cpp
include/camera/: camera.h  camera.pio
model/: ml_model.cpp  ml_model.h  tflite_model.h
